saved page updated

--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -7,13 +7,16 @@
 <h4>
 <a href="{{this.link}}" target="_blank">{{this.title}}</a>
 <form action="/save/{{this._id}}" method="POST">
+</br>
+<img class="media" src="{{this.img}}">
 <hr>
 </h4>
-<button type="submit" class="status" value="{{this.status}}">Unsaved</button>
+<button type="submit" class="status" value="{{this.status}}">Remove Article</button>
+</br>
 <a href="/" >Back</a>
 </form>
 
-<img class="media" src="{{this.img}}">
+
 </div>
 </div>
 </div>
