--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,18 +10,24 @@ body {
   color: hsl(0, 0%, 0%);
   background-color: #FCF5C7;
   font-family: "Open Sans", sans-serif;
+  background-image: url("https://i.ytimg.com/vi/8kr-h0jQbEY/maxresdefault.jpg");
 }
 
 /* include the board in the center of the viewport */
 .board {
   max-width: 1200px;
-  width: 90vw;
-  margin: 4rem auto;
+   margin: 4rem auto;
    overflow:scroll;
   display: grid;
   height:600px;
+  background-image:none;
+  font-size: 18px;
+  background-color: #0f0101;
+  border: 1px solid black;
+  opacity: 0.8;
+  filter: alpha(opacity=60); /* For IE8 and earlier */
   border: 4px solid hsl(207, 79%, 21%);
-  background: #fff;
+
   box-shadow: 0 2px 5px hsla(0, 0%, 0%, 0.3);
   /* position relative to absolute position the pseudo element */
   position: relative;
