--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,8 +8,7 @@
                     <h4>{{this.title}}</h4>
                                <summary>{{this.summary}}</summary>
                                 <img class="media" src="{{this.img}}">
-                                
-                    <h4><a href="{{this.link}}">Read More</a></h4>
+                    <h4><a href="https://www.nytimes.com/">Read More</a></h4>
                 </div>
                 <hr>
                 <div class="col col-md-2">
