--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,8 +15,8 @@ body {
 
 /* include the board in the center of the viewport */
 .board {
-  max-width: 1200px;
-   margin: 4rem auto;
+
+   margin: 40px auto;
    overflow:scroll;
   display: grid;
   height:600px;
@@ -61,7 +61,7 @@ body {
   display: flex;
   margin: 1rem 2rem;
   justify-content: space-evenly;
-  width: 80%;
+  width: 60%;
   justify-self: center;
 }
 /* style the buttons to have a bit of whitespace around the text
